--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "express": "^4.21.1",
+    "firebase": "^11.1.0",
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "node-fetch": "^3.3.2",
