--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "googleServicesFile": "./google-services.json",
+      "googleServicesFile": "./service.json",
       "package": "com.jsm.BLOODKING"
     },
     "web": {
