--- a/eas.json
+++ b/eas.json
@@ -5,8 +5,8 @@
         "buildType": "apk",
         "releaseChannel": "prod",
         "env": {
-          "EXPO_PUSH_NOTIFICATION_KEY": "BIPy9nBb36LiXqFeXzoFBgWPpnxZ7Vbr54QpOY_Z8UO6C4_f2Xppw0sXwujFwufyR8VgxbNKzpHHeZi8LRAx0qM",
-          "GOOGLE_SERVICES_JSON": "@env:GOOGLE_SERVICES_JSON"
+          "EXPO_PUSH_NOTIFICATION_KEY": "BIPy9nBb36LiXqFeXzoFBgWPpnxZ7Vbr54QpOY_Z8UO6C4_f2Xppw0sXwujFwufyR8VgxbNKzpHHeZi8LRAx0qM"
+          
         }
       }
     }
